# webrtc-peerconnection-client

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  build.cmd  build_absl.txt  build_jsoncpp.txt  vcpkg.json
.github/workflows/: build.yml
cmake/: FetchFFmpeg.cmake  FetchSlint.cmake  FetchWebRTC.cmake  ui_paths.h.in
doc/: ARCHITECTURE_COMPARISON.md  ARCHITECTURE_EVOLUTION.md  PROJECT_FILE_INVENTORY.md  README.md  REFACTORED_CALL_CHAIN.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_FINAL_REPORT.md  REFACTORING_GUIDE.md  REFACTORING_QUICK_REF.md  REFACTORING_SUMMARY.md  UI_BEAUTIFICATION.md  WEBRTC_API_MIGRATION.md
docs/: webrtc-repeat-call-video-debugging.md
include/: app_config.h  call_coordinator.h  call_coordinator_ports.h  call_signaling_transport.h  callmanager.h  defaults.h  ffmpeg_file_source.h  icall_observer.h  ice_disconnect_watchdog.h  local_media_source.h  managed_video_track_source.h  native_video_host.h  sdl_app.h  signal_message_dispatcher.h  signal_types.h  signalclient.h  signaling_codec.h  slint_app.h  slint_video_renderer.h  switchable_audio_input_win.h  video_call_window.h  videorenderer.h  webrtcengine.h
include/media_support/: frame_generator_capturer.h  platform_video_capturer.h  vcm_capturer.h
include/ui/: slint_app.h  slint_video_renderer.h
src/: call_coordinator.cc  call_coordinator_ports.cc  callmanager.cc  defaults.cc  ffmpeg_file_source.cc  ice_disconnect_watchdog.cc  main.cc  native_video_host.cc  sdl_app.cc  signal_message_dispatcher.cc  signalclient.cc  signaling_codec.cc  slint_app.cc  slint_video_renderer.cc  switchable_audio_input_win.cc  test_impl.cc  video_call_window.cc  videorenderer.cc  webrtcengine.cc  webrtcengine_internal.h  webrtcengine_media_pipeline.cc  webrtcengine_peer_connection.cc  webrtcengine_telemetry.cc
src/media_support/: frame_generator.cc  frame_generator_capturer.cc  frame_utils.cc  platform_video_capturer.cc  test_video_capturer.cc  vcm_capturer.cc  webrtc_test_shims.cc
src/ui/backend/: slint_app.cc  slint_video_renderer.cc
tests/: CMakeLists.txt
tests/integration/: call_flow_integration_test.cc
tests/support/: call_coordinator_test_support.h  callmanager_test_support.h
tests/unit/: call_coordinator_test.cc  callmanager_race_test.cc  callmanager_test.cc  ice_disconnect_watchdog_test.cc  signalclient_dispatch_test.cc  signaling_codec_test.cc
ui/: AppWindow.slint  app-window.slint  incoming-call-overlay.slint  logs-panel.slint  message-dialog-overlay.slint  sidebar-panel.slint  video-stage.slint
webrtc-signaling-server/: .env  .env.example  README.md  go.mod  go.sum  main.go  root_page.go  server.crt  server.key
webrtc-signaling-server/static/: conference.html  index.html  manifest.json  sw.js
webrtc-signaling-server/static/css/: conference.css  home.css  style.css
webrtc-signaling-server/static/js/: app.js  call-manager.js  conference-app.js  conference-manager.js  conference-ui.js  home.js  media-manager.js  signaling-manager.js  ui-manager.js  webrtc-manager.js
webrtc-signaling-server/static/livekit/: livekit-client.umd.min.js
